fixed debug variable view being clipped on smaller screens

--- a/client/IDE.css
+++ b/client/IDE.css
@@ -196,7 +196,7 @@ img.outbreakIDELogo
 	border-top: 1px  #A0A0A0 solid;
 	border-left: 1px  #A0A0A0 solid;
 	width: 100%;
-	top: 38%;
+	top: 41%;
 	height: 33%;
 	overflow: auto;
 }
